# Pinput

./: .gitignore  LICENSE.md  README.md
PICO-8/: pinput.lua  pinput_tester.p8
PICO-8/games/: atelier.p8  billboard.p8  shape_editor.p8  spin.p8
PICO-8/games/atelier/: assets.md  main.lua  main_test.lua
PICO-8/games/spin/: debug.lua  draw.lua  enemies.lua  format.lua  format_test.lua  init.lua  input.lua  math.lua  pico8_compat.lua  pico8_compat_test.lua  record.lua  record_stubbed.lua  repack.py  repack_test.py  replay.csv  replay.lua  shapes.lua  spawn.lua  test.lua  update.lua  vspr.lua
PICO-8/games/spin/repack/: __init__.py  __main__.py  bits.py  delta.py  rle.py  rle_nibblewise.py  typedefs.py  varint.py  varint_test.py
PICO-8/pinput_tester_html/: index.html  pinput_tester.js
WASM-4/pinput_tester/: Cargo.toml  README.md
WASM-4/pinput_tester/src/: gamepad.rs  lib.rs
Windows/Pinput/: Pinput.cpp  Pinput.rc  Pinput.sln  Pinput.vcxproj  Pinput.vcxproj.filters  Resource.h
Windows/PinputCli/: .vsconfig  PinputCli.cpp  PinputCli.rc  PinputCli.sln  PinputCli.vcxproj  PinputCli.vcxproj.filters  resource.h
docs/: index.html  pinput.js  pinput_tester.js
docs/gw8/: geometry_wars.js  index.html
macOS/: ExportOptions.plist
macOS/Pinput/: ContentView.swift  Gamepads.swift  Info.plist  Libproc.swift  Logger.swift  MachVM.swift  Pico8.swift  Pico8Connection.swift  PinputApp.swift  PinputGamepad.swift  module.modulemap
macOS/Pinput.xcodeproj/: project.pbxproj
macOS/Pinput.xcodeproj/xcshareddata/xcschemes/: Pinput.xcscheme
macOS/PinputTests/: PinputTests.swift
macOS/PinputUITests/: PinputUITests.swift
release/: create-and-push-tag.sh  index.html.patch  release-macos.sh  release-pico8-and-web.sh  release-pico8.sh  release-rust-windows.ps1  release-rust.sh  release-wasm4.sh  release-web-extensions.sh  release-windows.ps1  release.sh  update-version.py
rust/Pinput/: Cargo.toml
rust/pinput/: Cargo.toml  post_build.rs
rust/pinput/.cargo/: config.toml
rust/pinput/src/: constants.rs  error.rs  gamepad.rs  haptic_subsystem.rs  main.rs  pico8_connection.rs  runtime_connection.rs
web/: pinput-loader.js  pinput.js  webpack.config.js
web/extension/: manifest.json  pinput-extension.js.map
web/extension/v2/: manifest.json
web/extension/v3/: manifest.json
