[package]
name = "pinput_tester"
version = "0.1.3"
edition = "2021"
license = "MIT OR CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
bitflags = "1.3.2"

[profile.release]
opt-level = "z"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
