[package]
name = "pinput"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
sysinfo = "0.20.5"
proc-maps = "0.1.9"
process-memory = "0.4.0"
plist = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.4.1"
uuid = "0.8.2"
thiserror = "1.0.30"
anyhow = "1.0.44"
timer = "0.2.0"
chrono = "0.4.19"
ctrlc = "3.2.1"
bitflags = "1.3.2"
