[package]
name = "pinput"
version = "0.1.3"
edition = "2021"

[dependencies]
sdl2 = { version = "0.35.1", features = ["bundled", "static-link", "hidapi"] }
sysinfo = "0.26.1"
proc-maps = "0.2.1"
process-memory = "0.4.0"
plist = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.4.1"
uuid = "1.1.2"
thiserror = "1.0.30"
anyhow = "1.0.44"
timer = "0.2.0"
chrono = "0.4.19"
ctrlc = "3.2.1"
bitflags = "1.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.4"

[patch.crates-io]
proc-maps = { git = "https://github.com/VyrCossont/proc-maps", branch = "windows-use-VirtualQueryEx" }

[package.metadata.cargo-post.dependencies]
anyhow = "1.0.44"
memchr = "2.4.1"
memmap = "0.7.0"
windows = { version = "0.39.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
] }
