[package]
name = "pinput"
version = "0.1.4"
edition = "2021"

[features]
default = [ "haptics" ]
haptics = [ "buttplug", "futures", "tokio" ]

[dependencies]
sdl2 = { version = "0.35.1", features = ["bundled", "static-link", "hidapi"] }
sysinfo = "0.26.1"
proc-maps = "0.3.0"
process-memory = "0.4.0"
plist = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.4.1"
uuid = "1.1.2"
thiserror = "1.0.30"
anyhow = "1.0.44"
timer = "0.2.0"
chrono = "0.4.19"
ctrlc = "3.2.1"
bitflags = "1.3.2"
# We specifically do not want the XInput manager for Buttplug,
# because we already support XInput through SDL.
buttplug = { optional = true, version = "6.2.0" , features = [
    "tokio-runtime",
    "client",
    "server",
    "serialize-json",
    "websockets",
    "btleplug-manager",
    "serial-manager",
    "lovense-dongle-manager",
    "lovense-connect-service-manager",
    "websocket-server-manager"
] }
tokio = { optional = true, version = "1.21.2", features = [ "sync", "rt-multi-thread" ] }
futures = { optional = true, version = "0.3.25" }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.4"

[package.metadata.cargo-post.dependencies]
anyhow = "1.0.44"
memchr = "2.4.1"
memmap = "0.7.0"
windows = { version = "0.39.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
] }
